Page MenuHome GnuPG

Kleopatra: Card holder name is not correctly decoded
Closed, ResolvedPublic

Description

The card holder name stored on the card uses '<<' to separate last name and surname and '<' as escape sequence for space characters. Kleopatra decodes the '<<', but it does not unescape '<' characters.

Revisions and Commits

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Dec 21 2021, 5:02 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo claimed this task.
ebo added a subscriber: ebo.

works

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:57 PM