Unescape space characters in the display name

GnuPG-bug-id: 5745